landing pages: testing sizes

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 	</button>
 
 	<article class="margin">
-		<article class="indigo no-padding small-margin">
+		<!-- Small screens -->
+		<div class="s">
+		<article class="indigo no-padding no-margin center" style="max-width: 325px!important">
 			<h5 class="center-align white-text small-padding">Scegli una lingua &mdash; Choose a language</h5>
 		</article>
 
-		<!-- Small screens -->
-		<div class="s">
 		<div class="grid">
 			<div class="s12 center-align">
 				<a href="it/index.html">
 					<img class="responsive square medium" src="pics/it.png" alt="Bandiera Italiana">
 				</a>
-
+				<br>
 				<a class="button mtop-small" href="it/index.html">
 					<p class="large-text">Italiano</p>
 				</a>
@@ -68,7 +68,7 @@
 				<a href="en/index.html">
 					<img class="responsive square medium" src="pics/en.png" alt="English Flag">
 				</a>
-
+				<br>
 				<a class="button mtop-small" href="en/index.html">
 					<p class="large-text">English</p>
 				</a>
@@ -78,6 +78,10 @@
 
 		<!-- Medium screens -->
 		<div class="m">
+		<article class="indigo no-padding no-margin center" style="max-width: 750px!important">
+			<h5 class="center-align white-text small-padding">Scegli una lingua &mdash; Choose a language</h5>
+		</article>
+
 		<div class="grid">
 			<div class="s6 small-margin center-align">
 				<a href="it/index.html">
@@ -103,6 +107,10 @@
 
 		<!-- Large screens -->
 		<div class="l">
+		<article class="indigo no-padding no-margin center" style="max-width: 2400px!important">
+			<h5 class="center-align white-text small-padding">Scegli una lingua &mdash; Choose a language</h5>
+		</article>
+
 		<div class="grid">
 			<div class="s6 small-margin center-align">
 				<a href="it/index.html">
