it/kernel, it/index, css/style
it/kernel: complete redesign,
it/index: use "pill" buttons,
css/style: rudimentary changes, need to fix/reorder

--- a/it/index.html
+++ b/it/index.html
@@ -84,9 +84,9 @@
 		<p class="large-text">
 		Vai a:<br>
 
-		<a class="button border small-margin indigo white-text" href="#linux-soft">Linux &amp; Software</a>
-		<a class="button border small-margin indigo white-text" href="#about">Su di Me</a>
-		<a class="button border small-margin indigo white-text" href="#tools-links">Strumenti &amp; Link</a>
+		<a class="button round border small-margin indigo white-text" href="#linux-soft">Linux &amp; Software</a>
+		<a class="button round border small-margin indigo white-text" href="#about">Su di Me</a>
+		<a class="button round border small-margin indigo white-text" href="#tools-links">Strumenti &amp; Link</a>
 		</p>
 	</div>
 
@@ -315,6 +315,7 @@
 			</a>
 		</nav>
 	</article>
+	</div>
 	</div>
 </body>
 </html>
