it/{index,kernel,packages,software}.html + misc
it/:
	- index:	fix card link (packages -> software)
	- kernel:	move JS inside <head>

--- a/it/index.html
+++ b/it/index.html
@@ -184,7 +184,7 @@
 		</div>
 
 		<nav>
-			<a class="button round" href="packages.html">
+			<a class="button round" href="software.html">
 				<i>arrow_forward</i> Vai
 			</a>
 		</nav>
