--- a/it/packages.html
+++ b/it/packages.html
@@ -33,35 +33,39 @@
 
 	<!-- CSS overrides -->
 	<link rel="stylesheet" href="../css/style.css">
+
+	<script>
+	document.onreadystatechange = () => remember_prefs();
+	</script>
 </head>
-
-<script>
-ui();
-
-document.onreadystatechange = function() { remember_prefs(); document.body.onresize = function() { remember_prefs() }}
-</script>
 
 <body class="light">
 	<!-- Header -->
-	<header class="fixed padding indigo white-text">
-	<div class="row no-wrap middle-align">
-		<div class="col min no-margin no-padding">
-			<a href="index.html" class="chip circle indigo-text white"><i>arrow_backward</i></a>
+	<header class="fixed small-padding indigo white-text">
+		<div class="grid middle-align">
+			<div class="s2">
+				<a class="button circle white indigo-text" href="index.html">
+					<i>arrow_backward</i>
+				</a>
+			</div>
+
+			<div class="s6 center-align">
+				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
+					<p class="large-text">Salonia Matteo</p>
+				</a>
+			</div>
+
+			<div class="s4 right-align">
+				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+			</div>
 		</div>
-		<div class="col center-align">
-			<a href="https://salonia.it" class="button center-align large-text no-margin indigo-text white">Salonia Matteo</a>
-		</div>
-		<div class="col min no-margin no-padding right-align" style="margin-right: 0.5em !important">
-			<img class="responsive" src="../pics/logo_rec.png" style="min-width: 100rem !important">
-		</div>
-	</div>
 	</header>
 
 	<!-- FAB -->
 	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i>light_mode</i>
+		<i class="fill">light_mode</i>
 	</button>
-	
+
 	<div class="margin">
 	<div>
 		<h5>Pacchetti per Gentoo Linux</h5>
@@ -75,52 +79,44 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 
 	<!-- Packages -->
 	<div>
-	<article class="border no-padding">
-		<h5 class="left-align medium-padding indigo white-text">Pacchetti</h5>
-
-		<!-- Ask package -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col min small-margin">
-				<a href="contact.html"><i class="bold indigo-text">!</i></a>
-			</div>
-
-			<div class="col small-margin" style="margin-left: 1.3em !important">
-			Se volete altri pacchetti per Gentoo, cliccate il pulsante sotto per aprire la pagina contenente i
-			miei recapiti, per contattarmi e inviarmi la vostra richiesta.<br>
-
-			<div class="right-align">
-				<a href="contact.html" class="button border indigo white-text small-margin">Recapiti</a>
-			</div>
-			</div>
-		</div>
-
-		<div class="divider"></div>
-
-		<!-- Librsvg -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col min small-margin">
-			<a href="https://github.com/saloniamatteo/librsvg-overlay">
-				<img class="small square" src="../pics/librsvg.png" style="min-width: 3em !important">
+	<article class="indigo no-padding">
+		<h5 id="packages" class="white-text padding">
+			<a href="#packages">
+			Pacchetti
 			</a>
-			</div>
+		</h5>
+	</article>
 
-			<div class="col small-margin">
-			<div>
-				<a href="https://github.com/saloniamatteo/librsvg-overlay"><b><u>librsvg</u></b></a>
-				<br>
-				<label class="grey-text medium-text">(in Inglese; link esterno)</label>
-			</div>
+	<article>
+		<p>
+			Se volete altri pacchetti per Gentoo, cliccate il pulsante sotto per aprire la pagina contenente i miei recapiti, per contattarmi e inviarmi la vostra richiesta.
+		</p>
 
-			<p>
-			Librsvg senza dipendenza da rust.
-			</p>
+		<nav class="right-align small-margin">
+			<a class="button round" href="contact.html">Recapiti <i>arrow_forward</i></a>
+		</nav>
+	</article>
+
+	<!-- Librsvg -->
+	<article>
+		<div class="row">
+			<a href="https://github.com/saloniamatteo/librsvg-overlay">
+				<img class="square small" src="../pics/librsvg.png" alt="Librsvg logo" style="width: 55rem!important">
+			</a>
+
+			<div class="max">
+				<h6><a href="https://github.com/saloniamatteo/librsvg-overlay">librsvg</a></h6>
+				<p>Librsvg senza dipendenza su rust &mdash; programmato interamente in C</p>
 			</div>
-		</a>
 		</div>
+
+		<nav>
+			<a class="button round" href="https://github.com/saloniamatteo/librsvg-overlay">
+				<i>arrow_forward</i> Vai
+			</a>
+		</nav>
 	</article>
 	</div>
 	</div>
-
-	<div class="medium-space"></div>
 </body>
 </html>
