--- a/it/info.html
+++ b/it/info.html
@@ -33,35 +33,39 @@
 
 	<!-- CSS overrides -->
 	<link rel="stylesheet" href="../css/style.css">
+
+	<script>
+	document.onreadystatechange = () => remember_prefs();
+	</script>
 </head>
-
-<script>
-ui();
-
-document.onreadystatechange = function() { remember_prefs(); document.body.onresize = function() { remember_prefs() }}
-</script>
 
 <body class="light">
 	<!-- Header -->
-	<header class="fixed padding indigo white-text">
-	<div class="row no-wrap middle-align">
-		<div class="col min no-margin no-padding">
-			<a href="index.html" class="chip circle indigo-text white"><i>arrow_backward</i></a>
+	<header class="fixed small-padding indigo white-text">
+		<div class="grid middle-align">
+			<div class="s2">
+				<a class="button circle white indigo-text" href="index.html">
+					<i>arrow_backward</i>
+				</a>
+			</div>
+
+			<div class="s6 center-align">
+				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
+					<p class="large-text">Salonia Matteo</p>
+				</a>
+			</div>
+
+			<div class="s4 right-align">
+				<img class="responsive" src="../pics/logo_rec.png" style="max-width: 100px!important" alt="Logo Matteo Salonia">
+			</div>
 		</div>
-		<div class="col center-align">
-			<a href="https://salonia.it" class="button center-align large-text no-margin indigo-text white">Salonia Matteo</a>
-		</div>
-		<div class="col min no-margin no-padding right-align" style="margin-right: 0.5em !important">
-			<img class="responsive" src="../pics/logo_rec.png" style="min-width: 100rem !important">
-		</div>
-	</div>
 	</header>
 
 	<!-- FAB -->
 	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
-		<i>light_mode</i>
+		<i class="fill">light_mode</i>
 	</button>
-	
+
 	<div class="margin">
 	<div>
 		<h5>Informazioni su di me</h5>
@@ -69,8 +73,8 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 		<p class="large-text">
 		Vai a:<br>
 
-		<a class="button border small-margin indigo white-text" href="#tech">Conoscenze Informatiche</a>
-		<a class="button border small-margin indigo white-text" href="#lang">Conoscenze Linguistiche</a>
+		<a class="button round border small-margin indigo white-text" href="#tech">Conoscenze Informatiche</a>
+		<a class="button round border small-margin indigo white-text" href="#lang">Conoscenze Linguistiche</a>
 		</p>
 	</div>
 
@@ -78,102 +82,73 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 
 	<!-- Conoscenze Informatiche -->
 	<div>
-	<article class="border no-padding">
-		<h5 id="tech" class="left-align medium-padding indigo white-text">
+	<article class="indigo no-padding">
+		<h5 id="tech" class="white-text padding">
 		<a href="#tech">Conoscenze Informatiche</a>
 		</h5>
+	</article>
 
-		<!-- Server -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-				<h6>Gestione Server</h6>
-				<p>
-				Gestione di <b>server Linux</b> remoti e locali, Manutenzione periodica, Accesso ristretto con
-				<b>chiavi SSH</b> e Accesso senza password, Sicurezza alle <b>intrusioni</b> e Protezione
-				da <b>attacchi brute-force</b>.
-				</p>
-			</div>
-		</div>
+	<!-- Server -->
+	<article>
+		<h6>Gestione Server</h6>
+		<p>Gestione di <b>server Linux</b> remoti e locali, Manutenzione periodica, Accesso ristretto con <b>chiavi SSH</b> e Accesso senza password, Sicurezza alle <b>intrusioni</b> e Protezione da <b>attacchi brute-force</b>.</p>
+	</article>
 
-		<div class="divider"></div>
+	<!-- Software -->
+	<article>
+		<h6>Sviluppo Software</h6>
+		<p>
+		&mdash; Progettazione e Programmazione applicazioni per <b>Linux</b> in <b>C</b> e <b>C++</b>, con <u>Interfacce Grafiche</u> e <u>Interfacce per Terminale</u>
+		<br>
+		&mdash; Progettazione e Programmazione applicazioni per <b>Android</b> in <b>Java</b>
+		<br>
+		&mdash; Progettazione e Programmazione applicazioni per <b>Windows</b> in <b>Visual Basic</b> (<b>VB.NET</b>)
+		</p>
+	</article>
 
-		<!-- Software -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-				<h6>Sviluppo Software</h6>
-				<p>
-				&mdash; Progettazione e Programmazione applicazioni per <b>Linux</b> in <b>C</b> e <b>C++</b>,
-				con <u>Interfacce Grafiche</u> e <u>Interfacce per Terminale</u><br>
-				&mdash; Progettazione e Programmazione applicazioni per <b>Android</b> in <b>Java</b><br>
-				&mdash; Progettazione e Programmazione applicazioni per <b>Windows</b> in <b>Visual Basic</b> (<b>VB.NET</b>) 
-				</p>
-			</div>
-		</div>
-
-		<div class="divider"></div>
-
-		<!-- Web -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-				<h6>Web</h6>
-				<p>
-				&mdash; Creazione e Strutturazione logica di <u>Back-End Web Server</u> in <b>PHP</b>, con
-				connessione a <u>Database</u>, <u>Registrazione</u>/<u>Login</u>, ecc.<br>
-				&mdash; Creazione e Strutturazione <u>Pagine Web complete</u> in <b>HTML</b><br>
-				&mdash; Applicazione Stile a Pagine Web con <b>Framework CSS</b> facili da usare<br>
-				&mdash; Creazione <u>Logica Client-side Web</u> in <b>JavaScript</b>, per Controllo Validit&agrave; dei dati inseriti dall'utente, <u>rispettando la privacy dell'utente</u>.
-				</p>
-			</div>
-		</div>
+	<!-- Web -->
+	<article>
+		<h6>Web</h6>
+		<p>
+		&mdash; Creazione e Strutturazione logica di <u>Back-End Web Server</u> in <b>PHP</b>, con connessione a <u>Database</u>, <u>Registrazione</u>/<u>Login</u>, ecc.
+		<br>
+		&mdash; Creazione e Strutturazione <u>Pagine Web complete</u> in <b>HTML</b>
+		<br>
+		&mdash; Applicazione Stile a Pagine Web con <b>Framework CSS</b> facili da usare
+		<br>
+		&mdash; Creazione <u>Logica Client-side Web</u> in <b>JavaScript</b>, per Controllo Validit&agrave; dei dati inseriti dall'utente, <u>rispettando la privacy dell'utente</u>.
+		</p>
 	</article>
 	</div>
 
-	<div class="medium-space"></div>
+	<div class="space"></div>
 
 	<!-- Conoscenze Linguistiche -->
 	<div>
-	<article class="border no-padding">
-		<h5 id="lang" class="left-align medium-padding indigo white-text">
+	<article class="indigo no-padding">
+		<h5 id="lang" class="white-text padding">
 		<a href="#lang">Conoscenze Linguistiche</a>
 		</h5>
+	</article>
 
-		<!-- Italiano -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-				<h6>Italiano</h6>
-				<p>
-				L'Italiano &egrave; la lingua principale che uso parlando ogni giorno. Sono nato e vivo tutt'oggi in Italia.<br>
-				Livello lingua Italiana: <b>Madrelingua</b>
-				</p>
-			</div>
-		</div>
+	<!-- Italiano -->
+	<article>
+		<h6>Italiano</h6>
+		<p>L'Italiano &egrave; la lingua principale che uso parlando ogni giorno. Sono nato e vivo tutt'oggi in Italia.
+		<br>
+		Livello lingua Italiana: <b>Madrelingua</b>
+		</p>
+	</article>
 
-		<div class="divider"></div>
-
-		<!-- Inglese -->
-		<div class="small-margin row no-wrap middle-align">
-			<div class="col small-margin">
-				<h6>Inglese</h6>
-				<p>
-				L'Inglese &egrave; la seconda lingua che parlo ogni giorno, usandolo nella programmazione, per comunicare con
-				i miei amici, per usare Internet in generale, e cos&igrave; via. Parlo Inglese sin dalla 1° Media, dopo aver imparato
-				piano piano la lingua su Internet, ascoltando varie persone parlare mentre giocavano; dopodich&egrave;, mi sono
-				iscritto alla scuola di Inglese Cambridge University, dalla quale ho ottenuto la certificazione B2 in 3° Media.
-				</p>
-
-				<p class="small-space">
-				Livello lingua Inglese: <b>B2</b> (Cambridge Certification, in 3° media), <b>C1</b>
-				<a href="https://learnenglish.britishcouncil.org/online-english-level-test"
-				class="button border tiny indigo white-text">
-				(British Council online test)&nbsp;<i>arrow_forward</i>
-				</a>
-				</p>
-			</div>
-		</div>
+	<!-- Inglese -->
+	<article>
+		<h6>Inglese</h6>
+		<p>
+		L'Inglese &egrave; la seconda lingua che parlo ogni giorno, usandolo nella programmazione, per comunicare con i miei amici, per usare Internet in generale, e cos&igrave; via. Parlo Inglese sin dalla 1° Media, dopo aver imparato piano piano la lingua su Internet, ascoltando varie persone parlare mentre giocavano; dopodich&egrave;, mi sono iscritto alla scuola di Inglese Cambridge University, dalla quale ho ottenuto la certificazione B2 in 3° Media.
+		<br>
+		Livello lingua Inglese: <b>B2</b> (Cambridge Certification, in 3° media), <b>C1</b> <a class="link" href="https://learnenglish.britishcouncil.org/online-english-level-test"><u>(British Council online test)</u></a>
+		</p>
 	</article>
 	</div>
-	</div>
-
-	<div class="medium-space"></div>
 </body>
 </html>
